# roblox-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/cli/: Cargo.toml  rojo-template.json  runner-template.luau
crates/cli/src/: build.rs  describe.rs  iter_ext.rs  main.rs
crates/cli/src/codegen/: ast.rs  macros.rs  mod.rs  traits.rs
crates/cli/src/codegen/instructions/: exports.rs  headers.rs  imports.rs  mod.rs
crates/cli/src/codegen/instructions/conversion/: luau_to_rust.rs  mod.rs  rust_to_lua.rs
crates/macro-definitions/: Cargo.toml
crates/macro-definitions/src/: lib.rs
crates/macro-expansion/: Cargo.toml
crates/macro-expansion/src/: lib.rs  tests.rs
crates/macro-expansion/src/attribute/: expand.rs  mod.rs  parse.rs  symbol.rs
crates/macro-expansion/src/attribute/context/: description.rs  emit.rs  export.rs  import.rs  mains.rs  mod.rs
crates/roblox-rs/: Cargo.toml
crates/roblox-rs/src/: ffi.rs  internal.rs  lib.rs  luau_value.rs  prelude.rs
crates/roblox-rs/src/abi/: mod.rs  wasm_abi.rs  wasm_describe.rs  wasm_from_abi.rs  wasm_into_abi.rs  wasm_primitive.rs  wasm_return_abi.rs  wasm_slice.rs
crates/shared-context/: Cargo.toml
crates/shared-context/src/: lib.rs  shared_context.rs
examples/test-project/: Cargo.toml
examples/test-project/src/: lib.rs
