[package]
name = "roblox-rs-macro-expansion"
version = "0.0.1"
edition = "2021"
description = "This crate implements the roblox-rs procedural macro expansion."
license = "MPL-2.0"
repository = "https://github.com/roblox-rs/bindings"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
roblox-rs-shared-context = { path = "../shared-context", version = "0.0.1" }
